--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -162,6 +162,11 @@ hr {
   }
 }
 
+.community_statement {
+  font-family: 'Bree Serif', serif;
+  text-align: center;
+}
+
 // Shift left-nav down away from top-nav bar on desktop
 @media screen and (min-width: 768px) {
   .nav_padding {
