--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -9,6 +9,8 @@
 		<!--[if lt IE 9]>
 			<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
+    <!-- Google Fonts -->
+    <link href='http://fonts.googleapis.com/css?family=Bree+Serif' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
 <div class="wrapper">
@@ -73,15 +75,13 @@
                
                 <ul class="nav hidden-xs" id="lg-menu">
                     <!-- New Post Form  -->
-                    <%= render "posts/new" %>
+                    <%= render partial: "posts/new" %>
                     <li class="active"><a href="#featured"><i class="glyphicon glyphicon-list-alt"></i> Featured</a></li>
                     <li><a href="#stories"><i class="glyphicon glyphicon-list"></i> Stories</a></li>
                     <li><a href="#"><i class="glyphicon glyphicon-paperclip"></i> Saved</a></li>
                     <li><a href="#"><i class="glyphicon glyphicon-refresh"></i> Refresh</a></li>
                     <!-- Who We Are -->
-                    <h5> Universal Love and Bliss are our values. Eliminating ignorance and suffering, promoting learning and understanding, and connecting the world's people to one another is our mission. No matter who you are or where you come from, we love you and wish to help you as another sentient being, exploring this consciousness, this being, and this life. Its wonders, the greatest of which is the love we share for eachother, fuels our desire to make reality the pure bliss it's destined to be. Our peace is the peace of the universe, our happiness is the happiness of everyone. Join the revolution of a world, discovering its beautiful place in the cosmos. Welcome.</h5>
-                    <h4> Our Principles </h4>
-                    <h5> Empower the People and Communities | Give 51% of Our Earnings to Your Community | Do as Much Good as Possible | Create Bliss and Eliminate Suffering | Support the Growth of Peace, Love, Harmony, Compassion, and Reason Throughout the Universe </h3>
+                    <h4 class="community_statement"> A community for creators, thinkers, visionaries, innovators, technologists, artists, engineers, designers, scientists, humanitarians, explorers, tinkerers, entrepreneurs, musicians, writers, leaders, developers, sponsors, discoverers, organizers, lovers of life, and all those who aspire to be.</h4>
                 </ul>
                 <ul class="list-unstyled hidden-xs" id="sidebar-footer">
                     <li>
@@ -112,10 +112,10 @@
                       	<div class="row">
                           
                          <!-- main col left --> 
-                         <div class="col-sm-4">
+                         <div class="col-sm-12">
 
                               <!-- Render Posts -->
-                              <%= render "posts/index" %>
+                              <%= render partial: "posts/index", locals: {posts: @posts} %>
                            
                               <div class="panel panel-default">
                                 <div class="panel-thumbnail"><img src="/assets/example/bg_5.jpg" class="img-responsive"></div>
@@ -172,8 +172,8 @@
                            
                           </div>
                           
-                          <!-- main col right -->
-                          <div class="col-sm-8">
+                          <!-- main col right - removed for large center column
+                          <div class="col-sm-2">
                                
                                 <div class="well"> 
                                    <form class="form">
@@ -243,7 +243,8 @@
                               </div>
                             
                           </div>
-                       </div><!--/row-->
+                       </div><!--/row--> -->
+
                       
                         <div class="row">
                           <div class="col-sm-6">
