--- a/app/views/posts/_index.html.erb
+++ b/app/views/posts/_index.html.erb
@@ -1,4 +1,4 @@
-<% posts.reverse.each do |post| %>
+<% @posts.reverse.each do |post| %>
   <div class="panel panel-default">
     <div class="panel-body">
 	  <%= post.text %>
