--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -1,3 +1,42 @@
 // Place all the styles related to the posts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#post_box {
+	// color: #555555;
+}
+
+.post_button {
+	width: 76%;
+	margin-left: 15%;
+	font-family: 'Bree Serif', serif;
+}
+
+#share_idea {
+	text-align:center;
+	margin-left: 5%;
+    font-family: 'Bree Serif', serif;
+}
+
+
+// Placeholder Text Formatting cross-browser
+
+::-webkit-input-placeholder {
+   color: white;
+   font-size:16px;
+}
+
+:-moz-placeholder { /* Firefox 18- */
+   color: white;
+   font-size:16px;  
+}
+
+::-moz-placeholder {  /* Firefox 19+ */
+   color: white;
+   font-size:16px;  
+}
+
+:-ms-input-placeholder {  
+   color: white;
+   font-size:16px;  
+}
