spaced nicely, #tag away

--- a/app/views/posts/_new.html.erb
+++ b/app/views/posts/_new.html.erb
@@ -5,7 +5,7 @@
 
 <%= form_for :post, url: posts_path do |f| %>
   <p id='post_box'>
-    <%= f.text_area :text, :placeholder => "Let your thoughts flow .  .   .    .     ." %>
+    <%= f.text_area :text, :placeholder => "Let your thoughts flow .  .   .    .     .    and #tag away!" %>
   </p>
  
   <p>
