--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -9,12 +9,16 @@
 .post_button {
 	width: 76%;
 	margin-left: 15%;
+	padding-top: 7px;
+	padding-bottom: 7px;
+	margin-top: 7px; 
 	font-family: 'Bree Serif', serif;
 }
 
 #share_idea {
 	text-align:center;
 	margin-left: 5%;
+	padding-bottom: 10px;
     font-family: 'Bree Serif', serif;
 }
 
