--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -2,45 +2,58 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-#post_box {
+.post_box {
 	// color: #555555;
+	text-shadow: 0 1px 2px #000000;
 }
 
 .post_button {
 	width: 76%;
 	margin-left: 15%;
-	padding-top: 7px;
-	padding-bottom: 7px;
-	margin-top: 7px; 
+	padding-top: 5px;
+	padding-bottom: 5px;
+	margin-top: 5px; 
 	font-family: 'Bree Serif', serif;
+	font-size: 18px;
 }
 
+/*
 #share_idea {
 	text-align:center;
 	margin-left: 5%;
 	padding-bottom: 10px;
     font-family: 'Bree Serif', serif;
+    text-shadow: 2px 2px 3px #000000;
 }
+*/
 
 
 // Placeholder Text Formatting cross-browser
 
-::-webkit-input-placeholder {
+.post_box::-webkit-input-placeholder {
    color: white;
-   font-size:16px;
+   font-size: 24px;
+   line-height: 28px;
+   text-align: center;
 }
 
-:-moz-placeholder { /* Firefox 18- */
+.post_box:-moz-placeholder { /* Firefox 18- */
    color: white;
-   font-size:16px;  
+   font-size: 24px;
+   line-height: 28px;
+   text-align: center;  
 }
 
-::-moz-placeholder {  /* Firefox 19+ */
+.post_box::-moz-placeholder {  /* Firefox 19+ */
    color: white;
-   font-size:16px;  
+   font-size: 24px;
+   line-height: 28px;
+   text-align: center;  
 }
 
-:-ms-input-placeholder {  
+.post_box:-ms-input-placeholder {  
    color: white;
-   font-size:16px;  
+   font-size: 24px;
+   line-height: 28px;
+   text-align: center;  
 }
