--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -63,7 +63,7 @@ hr {
 }
 
 .full {
-  padding-top: 70px;
+  padding-top: 55px;
 }
 
 .box {
@@ -152,7 +152,7 @@ hr {
   padding-top: 15px;
   color: #ffffff;
   background-image: linear-gradient(to bottom, #2196ca, rgba(25, 151, 93, 0.65));
-  text-shadow: 0 0 2px #000000;
+  // text-shadow: 0 0 2px #000000;
   padding-left: 5px;
   a {
     color: #ffffff;
@@ -165,12 +165,13 @@ hr {
 .community_statement {
   font-family: 'Bree Serif', serif;
   text-align: center;
+  text-shadow: 1px 1px 2px #000000;
 }
 
 // Shift left-nav down away from top-nav bar on desktop
 @media screen and (min-width: 768px) {
   .nav_padding {
-    margin-top: 50px;
+    margin-top: 61px;
   } 
 }
 
