--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -114,7 +114,7 @@
                          <!-- main col left --> 
                          <div class="col-sm-12">
 
-                              <!-- Render Posts Partial -->
+                              <!-- Render Posts Partial to Populate Stream -->
                               <%= render "posts/index" %>
                            
                               <div class="panel panel-default">
