--- a/app/views/posts/_index.html.erb
+++ b/app/views/posts/_index.html.erb
@@ -6,7 +6,7 @@
       <%# For each of the ptags associated with that post %>
       <% @ptags.where(post_id:post.id).each do |ptag| %>
         <%# Link to the unique atag %>
-        <%= link_to ptag.hashtag, atag_path(Atag.where(tag:ptag.hashtag)) %>
+        <%= link_to ptag.hashtag, atag_path(Atag.where(id:ptag.atag_id)[0].id) %>
       <% end %>
 
       <%# Render each post text %>
