--- a/app/views/posts/_index.html.erb
+++ b/app/views/posts/_index.html.erb
@@ -1,64 +1,11 @@
 
 <%# For each each post %>
-<% @posts.reverse.each do |post| %>
+<% @posts_spliced.each do |post| %>
   <div class="panel panel-default">
-    <div class="panel-body">
-    <% @tag_indices = [] %>
-    <% @tag_links = [] %>
-
-      <%# For each of the ptags associated with that post %>
-      <% @ptags.where(post_id:post.id).each do |ptag| %>
-
-        <%# Record hashtag's start/stop indices for splicing post %>
-        <% @tag_indices.append([ptag.index_start, ptag.index_end]) %>
-
-
-        <%# Collect hashtag links for splicing post %>
-        <% @tag_links.append(link_to '#' + ptag.hashtag, atag_path(Atag.find_by(id:ptag.atag_id).id), 
-            :class => 'post_hashtag') %>
-
-      <% end %>
-
-      <%# Render each post %>
-      <%# Just render text if there are no hashtags %>
-      <% if @tag_indices.length == 0 %>
-      	<%= post.text %>
-      <%# If there is one, finaggle it %>
-      <% elsif @tag_indices.length == 1 %>
-       	<% if post.text[0] == '#' %>
-      	  <%= post.text[2..@tag_indices[0][0]] %>
-      	<% else %>
-      	  <%= post.text[0..@tag_indices[0][0]-2] %>
-      	<% end %>
-      	<%= @tag_links[0] %> 
-      	<%= post.text[@tag_indices[0][1]..-1] %>
-      <%# If there are hashtags, splice them in %>
-      <% else %>
-		<% @tag_count = 0 %>
-		<% if @tag_indices[0][0] == 0 %>
-		  <% @post_pieces = [] %>
-		<% else %>
-		  <% @post_pieces = [post.text[0..@tag_indices[0][0]-2]] %>
-		<% end %>
-		  <% @tag_indices.each do |indice| %>
-		  	<% @post_pieces.append(@tag_links[@tag_count]) %>
-		  	<% @post_pieces.append(post.text[indice[1]..@tag_indices[@tag_count+1][0]-2]) %>
-		  	<% if @tag_count < (@tag_indices.length-2) %>
-		  		<% @tag_count += 1 %>
-		  	<% else %>
-		  		<% 'lost' %>
-		  	<% end %>
-		  	<%# Move on to next %>
-		  <% end %>
-		  <% @post_pieces.pop %>
-		  <% @post_pieces.pop %>
-		  <% @post_pieces.each do |piece| %>
-		  	<%= piece %>
-		  <% end %>
-		  	<%= @tag_links[-1] %>
-		  	<%= post.text[@tag_indices[-1][1]..-1] %>
-	  <% end %>			
-	  
+    <div class="panel-body">		
+	 <% post.each do |piece| %>
+	 	<%= piece %>
+	 <% end %> 
     </div>
   </div>
 <% end %>
