--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -115,6 +115,7 @@
                          <div class="col-sm-12">
 
                               <!-- Render Posts Partial to Populate Stream -->
+                              <div id="tag_posts"></div>
                               <%= render "posts/index" %>
                            
                               <div class="panel panel-default">
