onclick tag posts load and page goes to top so posts can be seen

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -113,6 +113,8 @@
                          <!-- main col left --> 
                          <div class="col-sm-12">
 
+                          <a id="top" style="position: relative; top: -150px;">&nbsp;</a> 
+
                               <!-- Render Tag Posts Asynchronously to Populate Stream -->
                               <div id="tag_posts"></div>
 
@@ -120,7 +122,7 @@
                               <%= render "posts/index" %>
                            
                               <div class="panel panel-default">
-                                <div class="panel-thumbnail"><img src="/assets/example/bg_5.jpg" class="img-responsive"></div>
+                                <div class="panel-thumbnail"></div>
                                 <div class="panel-body">
                                   <p class="lead">Urbanization</p>
                                   <p>45 Followers, 13 Posts</p>
