--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -147,6 +147,9 @@ hr {
   }
 }
 
+
+// Left Navbar/Sections Formatting
+
 #sidebar {
   padding: 0px;
   padding-top: 15px;
@@ -154,15 +157,30 @@ hr {
   background-image: linear-gradient(to bottom, #2196ca, rgba(25, 151, 93, 0.65));
   // text-shadow: 0 0 2px #000000;
   padding-left: 5px;
-  a {
-    color: #ffffff;
-    background-color: transparent;
-    text-shadow: 0 0 2px #000000;
-    padding-left: 5px;
-  }
+}
+
+.trending {
+  text-align: center;
+  font-family: 'Bree Serif', serif;
+  margin-left: 25px;
+  text-shadow: 1px 1px 2px #000000;
+  margin-top:30px;
+}
+
+.trending_tags {
+  font-family: 'Bree Serif', serif;
+  font-size: 16px;
+  text-shadow: 1px 1px 2px #000000;
+  color: #ffffff;
+  padding-left: 5px;
+}
+
+.trending_tags:hover {
+  color: #000000;
 }
 
 .community_statement {
+  margin-top:20px;
   font-family: 'Bree Serif', serif;
   text-align: center;
   text-shadow: 1px 1px 2px #000000;
@@ -178,8 +196,11 @@ hr {
 #sidebar-footer a {
   color: #ffffff;
   background-color: transparent;
-  text-shadow: 0 0 2px #000000;
   padding-left: 5px;
+}
+
+#sidebar-footer a:hover {
+  color: #000000;
 }
 
 #sidebar .nav li > a:hover {
@@ -205,9 +226,12 @@ hr {
 }
 
 #sidebar-footer {
-  position: absolute;
   bottom: 5px;
   padding: 5px;
+  text-align:center;
+  font-family: 'Bree Serif', serif;
+  text-shadow: 1px 1px 2px #000000;
+  margin-top: 10px;
 }
 
 #footer {
