--- a/app/views/atags/_atag.html.erb
+++ b/app/views/atags/_atag.html.erb
@@ -1,7 +1,7 @@
 <%# For each each spliced apost made of pieces (text and hashtags) %>
 <% @aposts_spliced.each do |apost_pieces| %>
   <div class="panel panel-default">
-    <div class="panel-body">
+    <div class="panel-body" style="word-wrap: break-word;">
      <%# Build post from pieces (text and hashtags) %>		
 	 <% apost_pieces.each do |piece| %>
 	 	<%= piece %>
