Hooraaay comments are working ;D

--- a/app/views/posts/_index.html.erb
+++ b/app/views/posts/_index.html.erb
@@ -3,13 +3,16 @@
 <% @posts_spliced.each do |post_pieces| %>
   <div class="panel panel-default">
     <div class="panel-body" style="word-wrap: break-word;">
-     <%# Build post from pieces (text and hashtags) %>		
-	 <% post_pieces.each do |piece| %>
+
+     <%# Build post from pieces (text and hashtags), excluding last element which is post_id %>		
+	 <% post_pieces[0..-2].each do |piece| %>
 	 	<%= piece %>
 	 <% end %>
-	 <%# Render Comment Form %> 
+
+	 <%# Render a comment form for this post %> 
 	 <%= form_for :comment, url: post_comments_path(post_id:post_pieces[-1]) do |f| %>
   		<p>
+  		<%= f.hidden_field :post_id, :value => post_pieces[-1] %>
     	<%= f.text_area :text, :class => "comment_box", :placeholder => "Craft a gorgeous response you beautiful human being... Or just let you mind GOOOO000!!!!" %>
   		</p>
  
@@ -17,6 +20,17 @@
     	<%= f.submit 'B00M Baby', :class => 'post_button btn btn-default' %>
   		</p>
 	 <% end %>
+
+	 <%# Render each comment for this post %>
+	 <% @comments.where(post_id:post_pieces[-1]).each do |comment| %>
+	   <div class="panel panel-default">
+	     <div class="panel-body" style="word-wrap: break-word;">
+	     	<%# Show comment %>
+			<%= comment.text %>
+	     </div>
+	   </div>
+	 <% end %>
+
     </div>
   </div>
 <% end %>
