--- a/app/views/comments/_index.html.erb
+++ b/app/views/comments/_index.html.erb
@@ -1,5 +1,5 @@
 <%# For each comment in post %>
-<% @comments.each do |comment| %>
+<% @comments.where().each do |comment| %>
   <div class="panel panel-default">
     <div class="panel-body" style="word-wrap: break-word;">
     	<%# Show comment %>
