refactored respecting DRY so splice_posts is application function. Made hashtags js target post_box only, add comment_box css/working on styling

--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -240,6 +240,53 @@ hr {
   margin-bottom: 20px;
 }
 
+// Main Section Formatting
+
+.comment_box {
+  // color: #555555;
+  text-shadow: 0 1px 2px #000000;
+}
+
+.comment_button {
+  width: 40%;
+  margin-left: 15%;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  margin-top: 5px; 
+  font-family: 'Bree Serif', serif;
+  font-size: 18px;
+}
+
+// Placeholder Text Formatting cross-browser
+
+.comment_box::-webkit-input-placeholder {
+   color: white;
+   font-size: 24px;
+   line-height: 28px;
+   text-align: center;
+}
+
+.comment_box:-moz-placeholder { /* Firefox 18- */
+   color: white;
+   font-size: 24px;
+   line-height: 28px;
+   text-align: center;  
+}
+
+.comment_box::-moz-placeholder {  /* Firefox 19+ */
+   color: white;
+   font-size: 24px;
+   line-height: 28px;
+   text-align: center;  
+}
+
+.comment_box:-ms-input-placeholder {  
+   color: white;
+   font-size: 24px;
+   line-height: 28px;
+   text-align: center;  
+}
+
 /* bootstrap overrides */
 
 h1, h2, h3 {
