--- a/app/views/posts/_index.html.erb
+++ b/app/views/posts/_index.html.erb
@@ -17,7 +17,7 @@
   		</p>
  
   		<p>
-    	<%= f.submit 'B00M Baby', :class => 'post_button btn btn-default' %>
+    	<%= f.submit 'B00M Baby', :class => 'comment_button btn btn-default' %>
   		</p>
 	 <% end %>
 
