Greatly refactored codebase, due to rewriting splice_posts function using map! and split methods. Added url rendering to posts in splicing. Added production gem for heroku rails_12factor. Removed ptag indices, and changed hashtag => tag. No longer use twitter extractor.

--- a/app/views/atags/_atag.html.erb
+++ b/app/views/atags/_atag.html.erb
@@ -1,5 +1,5 @@
 <%# For each each spliced apost made of pieces (text and hashtags) %>
-<% @aposts_spliced.each do |apost_pieces| %>
+<% @aposts_spliced.reverse.each do |apost_pieces| %>
   <div class="panel panel-default">
     <div class="panel-body" style="word-wrap: break-word;">
 
