--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -243,47 +243,62 @@ hr {
 // Main Section Formatting
 
 .comment_box {
-  // color: #555555;
-  text-shadow: 0 1px 2px #000000;
+  float: left;
+  width: 74%;
+  border-radius: 7px;
+  outline: none;
+  margin-top: 6px;
+  margin-bottom: 22px;
+}
+
+.comment_box:focus {
+  box-shadow: 0px 0px 3px 1px #1F95B3;
 }
 
 .comment_button {
-  width: 40%;
-  margin-left: 15%;
-  padding-top: 5px;
-  padding-bottom: 5px;
+  width: 25%;
+  padding-top: 10px;
+  padding-bottom: 10px;
   margin-top: 5px; 
   font-family: 'Bree Serif', serif;
   font-size: 18px;
+  float: right;
 }
 
+.comment_button_padding {
+  margin-top: 14px;
+}
+
+.comments {
+  clear: both;
+}
 // Placeholder Text Formatting cross-browser
 
 .comment_box::-webkit-input-placeholder {
-   color: white;
-   font-size: 24px;
-   line-height: 28px;
+   color: #555555;
+   font-size: 14px;
+   line-height: 17px;
    text-align: center;
 }
 
 .comment_box:-moz-placeholder { /* Firefox 18- */
-   color: white;
-   font-size: 24px;
-   line-height: 28px;
+   color: #555555;
+   font-size: 14px;
+   line-height: 17px;
    text-align: center;  
 }
 
 .comment_box::-moz-placeholder {  /* Firefox 19+ */
-   color: white;
-   font-size: 24px;
-   line-height: 28px;
+   color: #555555;
+   font-size: 14px;
+   line-height: 17px;
    text-align: center;  
 }
 
 .comment_box:-ms-input-placeholder {  
-   color: white;
-   font-size: 24px;
-   line-height: 28px;
+   color: #555555;
+   font-size: 14px;
+   line-height: 17px;
    text-align: center;  
 }
 
