--- a/app/views/posts/_index.html.erb
+++ b/app/views/posts/_index.html.erb
@@ -11,29 +11,21 @@
 
 	 <%# Render a comment form for this post %>
 	 <%= form_for :comment, url: post_comments_path(post_id:post_pieces[-1]) do |f| %>
-  		<p>
-  		<%= f.hidden_field :post_id, :value => post_pieces[-1] %>
-    	<%= f.text_area :text, :class => "comment_box", :placeholder => "Craft a gorgeous response you beautiful human being... Or just let you mind GOOOO000!!!!" %>
-  		</p>
- 
-  		<p>
-    	<%= f.submit 'B00M Baby', :class => 'comment_button btn btn-default' %>
-  		</p>
+			<%= f.hidden_field :post_id, :value => post_pieces[-1] %>
+		<%= f.text_area :text, :class => "comment_box", :placeholder => "Couldn't keep it in.. Don't let them know.. Well now they know! Can't hold it back anymore! I don't care what they're going to say!" %>
+			<div class='comment_button_padding'>
+		<%= f.submit 'Let it go!', :class => 'comment_button btn btn-default'%>
+		</div>
 	 <% end %>
 
-	 <%# Render each comment for this post %>
-	 <% @comments.where(post_id:post_pieces[-1]).each do |comment| %>
-	   <div class="panel panel-default">
-	     <div class="panel-body" style="word-wrap: break-word;">
-	     	<%# Show comment %>
-			<%= comment.text %>
-	     </div>
-	   </div>
-	 <% end %>
+	 <%= link_to 'Comments', '/posts/' + post_pieces[-1].to_s, remote: true %>
+ 	 <!-- Render Post Comments Asynchronously to Post's Stream on Click -->
+ 	 <div id="<%= 'post' + post_pieces[-1].to_s %>"></div>
 
     </div>
   </div>
 <% end %>
+
 
 
 
