--- a/app/views/posts/show.js.erb
+++ b/app/views/posts/show.js.erb
@@ -1,2 +1,2 @@
 
-$(<%= 'post' + request.path.scan(/\d/).join('') %>).html("<%= escape_javascript(render @comments) %>");
+$(<%= 'post' + request.path.scan(/\d/).join('') %>).html("<%= escape_javascript(render @comments[0]) %>");
