--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -25,7 +25,9 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
                       </button>
-                      <a href="/" class="navbar-brand logo">b</a>
+                      <div>
+                        <a href="#top"><img src='think_space_logo.png' class="tslogo"></a>
+                      </div>
                     </div>
                     <nav class="collapse navbar-collapse" role="navigation">
                     <form class="navbar-form navbar-left">
