--- a/app/views/posts/_index.html.erb
+++ b/app/views/posts/_index.html.erb
@@ -12,7 +12,7 @@
 	 <%# Render a comment form for this post %>
 	 <%= form_for :comment, url: post_comments_path(post_id:post_pieces[-1]) do |f| %>
 			<%= f.hidden_field :post_id, :value => post_pieces[-1] %>
-		<%= f.text_area :text, :class => "comment_box", :placeholder => "Couldn't keep it in.. Don't let them know.. Well now they know! Can't hold it back anymore! I don't care what they're going to say!" %>
+		<%= f.text_area :text, :class => "comment_box", :placeholder => "Free your mind..." %>
 			<div class='comment_button_padding'>
 		<%= f.submit 'Let it go!', :class => 'comment_button btn btn-default'%>
 		</div>
