--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -108,7 +108,7 @@ hr {
 .navbar-blue {
   .dropdown-menu li {
     a {
-      color: #2A4888;
+      color: #1D8C5C;
     }
     > a {
       padding-left: 30px;
@@ -116,18 +116,18 @@ hr {
   }
   li > a {
     &:hover, &:focus {
-      background-color: #2A4888;
+      background-color: #1D8C5C;
       color: #fff;
     }
   }
   .open {
-    background-color: #2A4888;
+    background-color: #1D8C5C;
     color: #fff;
     > a {
-      background-color: #2A4888;
+      background-color: #1D8C5C;
       color: #fff;
       &:hover, &:focus {
-        background-color: #2A4888;
+        background-color: #1D8C5C;
         color: #fff;
       }
     }
@@ -143,7 +143,26 @@ hr {
   width: 30px; 
   height: 30px;
   margin-top:8px;
-  margin-left:10px;
+  margin-left:20px;
+}
+
+.home_button {
+  margin-left: 20px;
+}
+
+.home_button:hover {
+  color: green;
+}
+
+.search_box_form {
+  width: 85%;
+  margin-top: 8px;
+  margin-left: -101px;
+  padding-left: 25%;
+}
+
+.notify {
+  margin-right: 0px;
 }
 
 #main {
