--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -29,29 +29,23 @@
                         <a href="#top"><img src='think_space_logo.png' class="tslogo"></a>
                       </div>
                     </div>
+                    <ul class="nav navbar-nav home_button">
+                      <li>
+                        <a href="#top"><i class="glyphicon glyphicon-home"></i> Home</a>
+                      </li>
+                    </ul>
                     <nav class="collapse navbar-collapse" role="navigation">
-                    <form class="navbar-form navbar-left">
-                        <div class="input-group input-group-sm" style="max-width:360px;">
-                          <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term">
+                    <form class="navbar-left search_box_form">
+                        <div class="input-group input-group-sm" class="search_box_div">
+                          <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term" class="search_box">
                           <div class="input-group-btn">
                             <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
                           </div>
                         </div>
                     </form>
-                    <ul class="nav navbar-nav">
-                      <li>
-                        <a href="#"><i class="glyphicon glyphicon-home"></i> Home</a>
-                      </li>
-                      <li>
-                        <a href="#postModal" role="button" data-toggle="modal"><i class="glyphicon glyphicon-plus"></i> Post</a>
-                      </li>
-                      <li>
-                        <a href="#"><span class="badge">badge</span></a>
-                      </li>
-                    </ul>
-                    <ul class="nav navbar-nav navbar-right navbar-user">
+                    <ul class="nav navbar-nav navbar-right notify">
                       <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-user"></i></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-exclamation fa-lg"></i></a>
                         <ul class="dropdown-menu">
                           <li><a href="">More</a></li>
                           <li><a href="">More</a></li>
