--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -147,7 +147,6 @@ hr {
 }
 
 .home_button {
-  margin-left: 20px;
 }
 
 .home_button:hover {
@@ -155,10 +154,9 @@ hr {
 }
 
 .search_box_form {
-  width: 90%;
+  width: 50%;
   margin-top: 8px;
-  margin-left: -101px;
-  padding-left: 25%;
+  margin-left: 25%;
 }
 
 .notify {
