--- a/app/views/posts/_index.html.erb
+++ b/app/views/posts/_index.html.erb
@@ -10,7 +10,7 @@
 	 <% end %>
 
 	 <% if @comments.where(post_id:post_pieces[-1]).length < 3 %>
-		 <%= form_for :comment, url: post_comments_path(post_id:post_pieces[-1]) do |f| %>
+		 <%= form_for :comment, remote: true, url: post_comments_path(post_id:post_pieces[-1]) do |f| %>
 				<%= f.hidden_field :post_id, :value => post_pieces[-1] %>
 			<%= f.text_area :text, :class => "comment_box", :placeholder => "Free your mind..." %>
 				<div class='comment_button_padding'>
@@ -23,11 +23,11 @@
 	 	 <div id="<%= 'post' + post_pieces[-1].to_s %>"></div>
     </div>
 
-	 <%# Comments Ajax Link %>
-	 <div class='comments_load_box panel-footer'>
-	 <%= link_to @comments.where(post_id:post_pieces[-1]).length.to_s + ' Responses', '/posts/' + 
-	 	post_pieces[-1].to_s, remote: true, :class => 'comments_load' %>
-	 </div>
+		 <%# Comments Ajax Link %>
+		 <div class='comments_load_box panel-footer'>
+		 <%= link_to @comments.where(post_id:post_pieces[-1]).length.to_s + ' Responses', '/posts/' + 
+		 	post_pieces[-1].to_s, remote: true, :class => 'comments_load' %>
+		 </div>
 
 	 <% end %>
   </div>
