--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -17,8 +17,9 @@
 
       <div class="column col-sm-12 col-xs-12" id="main">
           <!-- top nav -->
-                <div class="navbar navbar-blue navbar-static-top">  
-                    <div class="navbar-header">
+                <div class="navbar navbar-blue navbar-static-top">
+
+                    <div class="navbar-header col-sm-3">
                       <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".navbar-collapse">
                         <span class="sr-only">Toggle</span>
                         <span class="icon-bar"></span>
@@ -26,9 +27,12 @@
                   <span class="icon-bar"></span>
                       </button>
                       <div>
-                        <a href="#top"><img src='think_space_logo.png' class="tslogo"></a>
+                        <%= link_to image_tag('think_space_logo.png', :class => "tslogo"), '/' %>
                       </div>
+                        <%= link_to 'Think Space', '/', :class => "think_space" %>
                     </div>
+
+                  <div class="col-sm-9">
                     <nav class="collapse navbar-collapse" role="navigation">
 
                     <form class="navbar-left search_box_form">
@@ -54,10 +58,11 @@
                     </ul>
                     <ul class="nav navbar-nav home_button navbar-right">
                       <li>
-                        <a href="#top"><i class="glyphicon glyphicon-home"></i> Home</a>
+                        <a href="/"><i class="glyphicon glyphicon-home"></i> Home</a>
                       </li>
                     </ul>
                     </nav>
+                  </div>
                 </div>
                 <!-- /top nav -->
 
