fixed search from rendering error on blank request

--- a/app/views/posts/_search.html.erb
+++ b/app/views/posts/_search.html.erb
@@ -1,6 +1,6 @@
 
 <%# For each spliced post made of pieces (text and hashtags) %>
-<% @posts_spliced_searched.reverse.each do |post_pieces| %>
+<% @posts_spliced_searched.each do |post_pieces| %>
   <div class="panel panel-default">
     <div class="panel-body" style="word-wrap: break-word;">
 
