--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -126,6 +126,7 @@
 
                           <a id="top" style="position: relative; top: -150px;">&nbsp;</a> 
 
+                          <%# If request two parts, apparently there's a search request %>
                           <% if request.url.split('?').length == 2 %>
                             <%= render 'posts/search' %>
                           <% else %>
