--- a/app/views/posts/_index.html.erb
+++ b/app/views/posts/_index.html.erb
@@ -9,12 +9,12 @@
 	 	<%= piece %>
 	 <% end %>
 
-	 <% if @comments.where(post_id:post_pieces[-1]).length < 3 %>
+	 <% if @comments.where(post_id:post_pieces[-1]).length < 1 %>
 		 <%= form_for :comment, remote: true, url: post_comments_path(post_id:post_pieces[-1]) do |f| %>
 				<%= f.hidden_field :post_id, :value => post_pieces[-1] %>
 			<%= f.text_area :text, :class => "comment_box", :placeholder => "Free your mind..." %>
 				<div class='comment_button_padding'>
-			<%= f.submit 'Let it go!', :class => 'comment_button btn btn-default'%>
+			<%= f.submit 'Let it go!', :class => 'comment_button btn btn-default' %>
 			</div>
 		 <% end %>
 		</div>
@@ -25,8 +25,7 @@
 
 		 <%# Comments Ajax Link %>
 		 <div class='comments_load_box panel-footer'>
-		 <%= link_to @comments.where(post_id:post_pieces[-1]).length.to_s + ' Responses', '/posts/' + 
-		 	post_pieces[-1].to_s, remote: true, :class => 'comments_load' %>
+		 <%= link_to content_tag(:span, @comments.where(post_id:post_pieces[-1]).length.to_s + ' Response(s)'), '/posts/' + post_pieces[-1].to_s, remote: true, :class => 'comments_load' %>
 		 </div>
 
 	 <% end %>
