--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -317,15 +317,42 @@ hr {
 .comments_load_box {
   width: 100%;
   background-color: #F5F5F5;
+  position: relative;
+  height: 35px;
+}
+
+.comments_load_box span {
+  width:100%;
+  height:100%;
+  position:absolute;
+  z-index:2;
+  top:0px;
+  left:0px;
+  padding-top: 8px;
+  padding-left: 15px;
+}
+
+.comments_load_box:hover {
+  width: 100%;
+  background-color: #FFFFFF;
 }
 
 .comments_load {
   font-family: 'Bree Serif', serif;
 }
 
+.comments_load:hover {
+  color: #222222;
+}
+
 .comments {
   clear: both;
 }
+
+.comments_top {
+  padding-top: 15px;
+}
+
 // Placeholder Text Formatting cross-browser
 
 .comment_box::-webkit-input-placeholder {
