shrunk hashtags in post to text size, changed text family to bree serif

--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -6,7 +6,6 @@
 
 .post_hashtag {
 	font-family: 'Bree Serif', serif;
-	font-size: 16px;
 	color: #000000;
 }
 
@@ -20,6 +19,10 @@
 .post_box {
 	// color: #555555;
 	text-shadow: 0 1px 2px #000000;
+}
+
+.panel_body_text {
+  font-family: 'Bree Serif', serif;
 }
 
 .post_button {
