--- a/app/views/posts/_index.html.erb
+++ b/app/views/posts/_index.html.erb
@@ -1,7 +1,7 @@
 <%# For each spliced post made of pieces (text and hashtags) %>
 <% @posts_spliced.reverse.each do |post_pieces| %>
   <div class="panel panel-default">
-    <div class="panel-body" style="word-wrap: break-word;">
+    <div class="panel-body panel_body_text" style="word-wrap: break-word;">
 
      <%# Build post from pieces (text and hashtags), excluding last element which is post_id %>		
 	 <% post_pieces[0..-2].each do |piece| %>
